salesforce/force-app/main/default/objects/OrgIQ_Finding__c/OrgIQ_Finding__c.object-meta.xml
<CustomObject>
    <description>A single detected issue, with the evidence that proves it.</description>
    <label>OrgIQ Finding</label>
    <pluralLabel>OrgIQ Findings</pluralLabel>
    <nameField>
        <displayFormat>FIND-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>