salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <description>What must be true for this finding to count as resolved. Stored on the record so reviewers do not have to re-open the exported ticket.</description>
    <inlineHelpText>What must be true for this finding to count as resolved. Stored on the record so reviewers do not have to re-open the exported ticket.</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>