salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Actual_Effort_Points__c.field-meta.xml
<CustomField>
    <fullName>Actual_Effort_Points__c</fullName>
    <description>What this remediation actually took, filled in once the work is done. This is the only input that can ever calibrate the estimate — until enough of these exist, Effort_Points__c is judgement, not measurement.</description>
    <inlineHelpText>Points the work actually took. Leave blank until the ticket is closed.</inlineHelpText>
    <label>Actual Effort Points</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>