salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Blast_Radius__c.field-meta.xml
<CustomField>
    <fullName>Blast_Radius__c</fullName>
    <description>Count of components dependent on the affected component.</description>
    <inlineHelpText>Count of components dependent on the affected component.</inlineHelpText>
    <label>Blast Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>