salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Component_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Api_Name__c</fullName>
    <description>Fully qualified API name of the affected component.</description>
    <inlineHelpText>Fully qualified API name of the affected component.</inlineHelpText>
    <label>Component API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>