salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>Metadata type of the affected component.</description>
    <inlineHelpText>Metadata type of the affected component.</inlineHelpText>
    <label>Component Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>