salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>How certain the detection is. Low confidence findings never auto-emit as backlog items.</description>
    <inlineHelpText>How certain the detection is. Low confidence findings never auto-emit as backlog items.</inlineHelpText>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>