salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <description>Readiness dimension this finding belongs to.</description>
    <inlineHelpText>Readiness dimension this finding belongs to.</inlineHelpText>
    <label>Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>D5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>