salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Effort_Basis__c.field-meta.xml
<CustomField>
    <fullName>Effort_Basis__c</fullName>
    <description>How this estimate was derived, including the model version. An actual recorded against one model version must never be compared against another silently.</description>
    <inlineHelpText>Derivation of the effort estimate, and the model version behind it.</inlineHelpText>
    <label>Effort Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>