salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Effort_Points__c.field-meta.xml
<CustomField>
    <fullName>Effort_Points__c</fullName>
    <description>Provisional effort estimate. Not calibrated against engagement data.</description>
    <inlineHelpText>Provisional effort estimate. Not calibrated against engagement data.</inlineHelpText>
    <label>Effort Points</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>