salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Emits_To_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Emits_To_Backlog__c</fullName>
    <description>True when severity and confidence both clear the emission threshold.</description>
    <inlineHelpText>True when severity and confidence both clear the emission threshold.</inlineHelpText>
    <label>Emits To Backlog</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>