salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <description>Rule-level epic this finding rolls up to. Same value as the Epic Name column in the Jira backlog export, so a re-import lands in the same epic.</description>
    <inlineHelpText>Rule-level epic this finding rolls up to. Same value as the Epic Name column in the Jira backlog export, so a re-import lands in the same epic.</inlineHelpText>
    <label>Epic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>