salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <description>What was observed that proves this finding.</description>
    <inlineHelpText>What was observed that proves this finding.</inlineHelpText>
    <label>Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>