salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Expert_Estimate_Points__c.field-meta.xml
<CustomField>
    <fullName>Expert_Estimate_Points__c</fullName>
    <description>What a practitioner said this would take, before anyone did it. Deliberately a separate field from Actual_Effort_Points__c: an expert's judgement calibrating another judgement is not measurement, and mixing the two would let the model look measured when it is only agreed-with.</description>
    <inlineHelpText>A practitioner's estimate. Not an outcome — see Actual Effort Points for that.</inlineHelpText>
    <label>Expert Estimate Points</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>