salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/External_Finding_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Finding_Id__c</fullName>
    <description>Deterministic hash of rule, component and org. Makes re-import idempotent.</description>
    <inlineHelpText>Deterministic hash of rule, component and org. Makes re-import idempotent.</inlineHelpText>
    <label>External Finding Id</label>
    <externalId>true</externalId>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>