salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>The role that does this work, derived from the rule and its dimension. A role rather than a person: a name would be wrong in every org but the one it was written for, while a role maps onto whatever that org calls the team. The mapping is judgement and lives in scanner/rubric.json, not in the engine.</description>
    <inlineHelpText>Which team this finding is for.</inlineHelpText>
    <label>Owner Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>