salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <description>Ordered steps to resolve this finding.</description>
    <inlineHelpText>Ordered steps to resolve this finding.</inlineHelpText>
    <label>Remediation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>