salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Resolved_In_Scan__c.field-meta.xml
<CustomField>
    <fullName>Resolved_In_Scan__c</fullName>
    <description>External id of the scan in which this finding stopped being reported. With the scan it first appeared in, this gives how long the defect survived — elapsed time, which is observable, as opposed to effort, which is not.</description>
    <inlineHelpText>Scan where this finding stopped being reported.</inlineHelpText>
    <label>Resolved In Scan</label>
    <length>80</length>
    <type>Text</type>
</CustomField>