salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <description>Stable identifier of the rule that fired, for example D1.SEMANTIC_DUPLICATE.</description>
    <inlineHelpText>Stable identifier of the rule that fired, for example D1.SEMANTIC_DUPLICATE.</inlineHelpText>
    <label>Rule Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>