salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Rule_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Rule_Maturity__c</fullName>
    <description>Validation evidence behind the rule. Caps the confidence this finding may claim.</description>
    <inlineHelpText>Validation evidence behind the rule. Caps the confidence this finding may claim.</inlineHelpText>
    <label>Rule Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>experimental</fullName>
            </value>
            <value>
                <fullName>validated</fullName>
            </value>
            <value>
                <fullName>field-proven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>