salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <description>The scan that produced this finding.</description>
    <inlineHelpText>The scan that produced this finding.</inlineHelpText>
    <label>Scan</label>
    <referenceTo>OrgIQ_Scan__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>