salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Which tool reported this finding. Restricted so findings imported from Optimizer, Health Check or Code Analyzer can share this backlog without diluting OrgIQ's own rule provenance.</description>
    <inlineHelpText>Which tool reported this finding. Restricted so findings imported from Optimizer, Health Check or Code Analyzer can share this backlog without diluting OrgIQ's own rule provenance.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrgIQ</fullName>
                <default>true</default>
                <label>OrgIQ</label>
            </value>
            <value>
                <fullName>Optimizer</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Code Analyzer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>