salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state across re-scans.</description>
    <inlineHelpText>Lifecycle state across re-scans.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Suppressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>