salesforce/force-app/main/default/objects/OrgIQ_Finding__c/fields/Verdict_Note__c.field-meta.xml
<CustomField>
    <fullName>Verdict_Note__c</fullName>
    <description>Why, in the reviewer's words. This is the field that improves the rules: a precision number says which rule is wrong, and only the note says what it got wrong. Most valuable on a False Positive, and worth recording on a surprising True Positive too.</description>
    <label>Verdict Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>